CS373 week 1 finished

--- a/css/common.css
+++ b/css/common.css
@@ -5,12 +5,12 @@ html {
 	font: normal 100%/1.4 Georgia,serif;
 }
 
-p {
+p, h1{
 	text-align: center;
 }
 
 html, body {
-	height: 100%; margin: 0
+	height: 100%; margin: 0; padding: 0;
 }
 
 #content {
@@ -19,4 +19,4 @@ html, body {
 
 #left {width: 200px; height: 100%; float: left; background-color: gray}
 
-#right {margin-left: 100px; height: 100%; background-color: white}
+#right {margin-left: 200px; height: 100%; background-color: white; padding-left: 20px; padding-right: 20px;}
