--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,7 @@
 <nav>
 	<ul>
 		<li><a href="{{site.baseurl}}/index.html">Home</a></li>
-		<li><a href="{{site.baseurl}}/week1blog.html">CS 373 Week 1</a></li>
+		<li><a href="{{site.baseurl}}/cs373week1blog.html">CS 373 Week 1</a></li>
+		<li><a href="{{site.baseurl}}/cs371pweek1blog.html">CS 371P Week 1</a></li>
 	</ul>
 </nav>
