--- a/css/common.css
+++ b/css/common.css
@@ -2,7 +2,7 @@ html {
 	margin: 0;
 	padding: 0;
 	
-	font: normal 100%/1.4 Georgia,serif;
+	font: normal 100%/1.4 serif;
 }
 
 p, h1{
@@ -17,6 +17,6 @@ html, body {
 	width: 100%; height: 100%
 }
 
-#left {width: 200px; height: 100%; float: left; background-color: gray}
+#left {width: 250px; height: 100%; float: left; background-color: gray}
 
-#right {margin-left: 200px; height: 100%; background-color: white; padding-left: 20px; padding-right: 20px;}
+#right {margin-left: 250px; height: 100%; background-color: white; padding-left: 20px; padding-right: 20px;}
