Added week 2 blogs

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,5 +3,7 @@
 		<li><a href="{{site.baseurl}}/index.html">Home</a></li>
 		<li><a href="{{site.baseurl}}/cs373week1blog.html">CS 373 Week 1</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek1blog.html">CS 371P Week 1</a></li>
+		<li><a href="{{site.baseurl}}/cs373week2blog.html">CS 373 Week 2</a></li>
+		<li><a href="{{site.baseurl}}/cs371pweek2blog.html">CS 371P Week 2</a></li>
 	</ul>
 </nav>
