--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,5 +5,7 @@
 		<li><a href="{{site.baseurl}}/cs371pweek1blog.html">CS 371P Week 1</a></li>
 		<li><a href="{{site.baseurl}}/cs373week2blog.html">CS 373 Week 2</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek2blog.html">CS 371P Week 2</a></li>
+		<li><a href="{{site.baseurl}}/cs373week3blog.html">CS 373 Week 3</a></li>
+		<li><a href="{{site.baseurl}}/cs371pweek3blog.html">CS 371P Week 3</a></li>
 	</ul>
 </nav>
