Added week 6 blogs

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,5 +11,7 @@
 		<li><a href="{{site.baseurl}}/cs371pweek4blog.html">CS 371P Week 4</a></li>
 		<li><a href="{{site.baseurl}}/cs373week5blog.html">CS 373 Week 5</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek5blog.html">CS 371P Week 5</a></li>
+		<li><a href="{{site.baseurl}}/cs373week6blog.html">CS 373 Week 6</a></li>
+		<li><a href="{{site.baseurl}}/cs371pweek6blog.html">CS 371P Week 6</a></li>
 	</ul>
 </nav>
