Added week 8 blogs

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,5 +15,7 @@
 		<li><a href="{{site.baseurl}}/cs371pweek6blog.html">CS 371P Week 6</a></li>
 		<li><a href="{{site.baseurl}}/cs373week7blog.html">CS 373 Week 7</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek7blog.html">CS 371P Week 7</a></li>
+		<li><a href="{{site.baseurl}}/cs373week8blog.html">CS 373 Week 8</a></li>
+		<li><a href="{{site.baseurl}}/cs371pweek8blog.html">CS 371P Week 8</a></li>
 	</ul>
 </nav>
