--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,5 +17,7 @@
 		<li><a href="{{site.baseurl}}/cs371pweek7blog.html">CS 371P Week 7</a></li>
 		<li><a href="{{site.baseurl}}/cs373week8blog.html">CS 373 Week 8</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek8blog.html">CS 371P Week 8</a></li>
+		<li><a href="{{site.baseurl}}/cs373week9blog.html">CS 373 Week 9</a></li>
+		<li><a href="{{site.baseurl}}/cs371pweek9blog.html">CS 371P Week 9</a></li>
 	</ul>
 </nav>
