--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,5 +19,7 @@
 		<li><a href="{{site.baseurl}}/cs371pweek8blog.html">CS 371P Week 8</a></li>
 		<li><a href="{{site.baseurl}}/cs373week9blog.html">CS 373 Week 9</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek9blog.html">CS 371P Week 9</a></li>
+		<li><a href="{{site.baseurl}}/cs373week10blog.html">CS 373 Week 10</a></li>
+		<li><a href="{{site.baseurl}}/cs371pweek10blog.html">CS 371P Week 10</a></li>
 	</ul>
 </nav>
