--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,27 +1,31 @@
 <nav>
 	<ul>
 		<li><a href="{{site.baseurl}}/index.html">Home</a></li>
-		<li><a href="{{site.baseurl}}/cs373week1blog.html">CS 373 Week 1</a></li>
+		<p/>
 		<li><a href="{{site.baseurl}}/cs371pweek1blog.html">CS 371P Week 1</a></li>
-		<li><a href="{{site.baseurl}}/cs373week2blog.html">CS 373 Week 2</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek2blog.html">CS 371P Week 2</a></li>
-		<li><a href="{{site.baseurl}}/cs373week3blog.html">CS 373 Week 3</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek3blog.html">CS 371P Week 3</a></li>
-		<li><a href="{{site.baseurl}}/cs373week4blog.html">CS 373 Week 4</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek4blog.html">CS 371P Week 4</a></li>
-		<li><a href="{{site.baseurl}}/cs373week5blog.html">CS 373 Week 5</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek5blog.html">CS 371P Week 5</a></li>
-		<li><a href="{{site.baseurl}}/cs373week6blog.html">CS 373 Week 6</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek6blog.html">CS 371P Week 6</a></li>
-		<li><a href="{{site.baseurl}}/cs373week7blog.html">CS 373 Week 7</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek7blog.html">CS 371P Week 7</a></li>
-		<li><a href="{{site.baseurl}}/cs373week8blog.html">CS 373 Week 8</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek8blog.html">CS 371P Week 8</a></li>
-		<li><a href="{{site.baseurl}}/cs373week9blog.html">CS 373 Week 9</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek9blog.html">CS 371P Week 9</a></li>
-		<li><a href="{{site.baseurl}}/cs373week10blog.html">CS 373 Week 10</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek10blog.html">CS 371P Week 10</a></li>
-		<li><a href="{{site.baseurl}}/cs373week11blog.html">CS 373 Week 11</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek11blog.html">CS 371P Week 11</a></li>
+		<li><a href="{{site.baseurl}}/cs371pweek12blog.html">CS 371P Week 12</a></li>
+		<p/>
+		<li><a href="{{site.baseurl}}/cs373week1blog.html">CS 373 Week 1</a></li>
+		<li><a href="{{site.baseurl}}/cs373week2blog.html">CS 373 Week 2</a></li>
+		<li><a href="{{site.baseurl}}/cs373week3blog.html">CS 373 Week 3</a></li>
+		<li><a href="{{site.baseurl}}/cs373week4blog.html">CS 373 Week 4</a></li>
+		<li><a href="{{site.baseurl}}/cs373week5blog.html">CS 373 Week 5</a></li>
+		<li><a href="{{site.baseurl}}/cs373week6blog.html">CS 373 Week 6</a></li>
+		<li><a href="{{site.baseurl}}/cs373week7blog.html">CS 373 Week 7</a></li>
+		<li><a href="{{site.baseurl}}/cs373week8blog.html">CS 373 Week 8</a></li>
+		<li><a href="{{site.baseurl}}/cs373week9blog.html">CS 373 Week 9</a></li>
+		<li><a href="{{site.baseurl}}/cs373week10blog.html">CS 373 Week 10</a></li>
+		<li><a href="{{site.baseurl}}/cs373week11blog.html">CS 373 Week 11</a></li>
+		<li><a href="{{site.baseurl}}/cs373week12blog.html">CS 373 Week 12</a></li>
 	</ul>
 </nav>
