--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,6 +14,7 @@
 		<li><a href="{{site.baseurl}}/cs371pweek10blog.html">CS 371P Week 10</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek11blog.html">CS 371P Week 11</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek12blog.html">CS 371P Week 12</a></li>
+		<li><a href="{{site.baseurl}}/cs371pweek13blog.html">CS 371P Week 13</a></li>
 		<p/>
 		<li><a href="{{site.baseurl}}/cs373week1blog.html">CS 373 Week 1</a></li>
 		<li><a href="{{site.baseurl}}/cs373week2blog.html">CS 373 Week 2</a></li>
@@ -27,5 +28,6 @@
 		<li><a href="{{site.baseurl}}/cs373week10blog.html">CS 373 Week 10</a></li>
 		<li><a href="{{site.baseurl}}/cs373week11blog.html">CS 373 Week 11</a></li>
 		<li><a href="{{site.baseurl}}/cs373week12blog.html">CS 373 Week 12</a></li>
+		<li><a href="{{site.baseurl}}/cs373week13blog.html">CS 373 Week 13</a></li>
 	</ul>
 </nav>
