Added week 15 blogs

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,6 +16,7 @@
 		<li><a href="{{site.baseurl}}/cs371pweek12blog.html">CS 371P Week 12</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek13blog.html">CS 371P Week 13</a></li>
 		<li><a href="{{site.baseurl}}/cs371pweek14blog.html">CS 371P Week 14</a></li>
+		<li><a href="{{site.baseurl}}/cs371pweek15blog.html">CS 371P Week 15</a></li>
 		<p/>
 		<li><a href="{{site.baseurl}}/cs373week1blog.html">CS 373 Week 1</a></li>
 		<li><a href="{{site.baseurl}}/cs373week2blog.html">CS 373 Week 2</a></li>
@@ -31,5 +32,6 @@
 		<li><a href="{{site.baseurl}}/cs373week12blog.html">CS 373 Week 12</a></li>
 		<li><a href="{{site.baseurl}}/cs373week13blog.html">CS 373 Week 13</a></li>
 		<li><a href="{{site.baseurl}}/cs373week14blog.html">CS 373 Week 14</a></li>
+		<li><a href="{{site.baseurl}}/cs373week15blog.html">CS 373 Week 15</a></li>
 	</ul>
 </nav>
